syntax = "proto3";

package pb;
option go_package = "github.com/pule1234/VideoForge/pb;pb";

message UploadVideoRequest {
  string tempDir = 1;
  string title = 2;
  string user_name = 3;
  string bucket = 4;
  int64 subscribe = 5;
  string domain = 6;
  string file_name = 7;
  string object_name = 8;
}

message UploadVideoResponse {
  string message = 1;
  string video_id = 2;
  string platform = 3;
}