syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/pule1234/VideoForge/pb;pb";


message User{
  int64 userid = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
}

message RenewAccessTokenRequest {
  string RefreshToken = 1;
}

message RenewAccessTokenResponse {
  string AccessToken = 1;
  google.protobuf.Timestamp AccessTokenExpireAt = 2;
}

message CreateUserRequest {
  string UserName = 1;
  string Password = 2;
  string Email = 3;
}

message CreateUserResponse {
  int64 UserId = 1;
  string UserName = 2;
  string Email = 3;
}

message UserLoginRequest {
  string UserName = 1;
  string passWord = 2;
}

message UserLoginResponse {
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp access_token_expires_at = 5;
  google.protobuf.Timestamp refresh_token_expires_at = 6;
}
